--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "dompurify": "^2.0.15",
     "jwt-decode": "^2.2.0",
     "moment": "^2.26.0",
     "ngx-toastr": "^12.1.0",
